2010-12-24  Shujing Zhao  <pearly.zhao@oracle.com>

	* librtld/rtld_db.c: Move rd_loadobj_iter to ...
	* libproc/common/Psymtab.c: here and remove the first parameter rap
	and adjust the callers.
	* include/rtld_db.h (rd_loadobj_iter): Remove.
	* libproc/common/Pcontrol.h (rd_loadobj_iter): Declare.

2010-12-17  Shujing Zhao  <pearly.zhao@oracle.com>

	* cmd/common/dtrace.c: set environment variable POSIXLY_CORRECT to
	make getopt works on Linux.

2010-12-07  Shujing Zhao  <pearly.zhao@oracle.com>

	* libdtrace/dt_proc.c (dt_proc_control): Set dpr->dpr_quit to 1
	instead of write ctl file.
	* libproc/common/Pcontrol.c (Pxcreate): Don't detach to the child
	process.
	(Psetrun): Restarts the stopped child process by ptrace instead of
	write to the ctl file.
	* libproc/common/Psymtab.c (Pupdate_maps): Use fclose instead of close
	to close the file.

2010-12-03  Shujing Zhao  <pearly.zhao@oracle.com>

	* include/sys/procfs.h: Comment the definition of prxmap_t and
	prxmap32_t. They are not be used.
	* libproc/common/Pcontrol.c (Pxcreate): Use ptrace to trace child
	process instead of using signal to control it.
	* libproc/common/Psymtab.c (Pupdate_maps): Change the way to read
	/proc/<pid>/maps, for the file size is zero at Linux.
	* libproc/common/Psymtab.c (Preadauxvec): Change the way to read
	/proc/<pid>/auxv, for the file size is zero at Linux.

	* libproc/common/Pscantext.c (Pscantext): Change the way to read
	/proc/<pid>/maps.

2010-11-24  Shujing Zhao  <pearly.zhao@oracle.com>

	* libproc/common/Pcontrol.c (sig_int): New function used as signal
	handler.
	(Pxcreate): Add signal handler to child process. Use
	/proc/<pid>/mem instead of /proc/<pid>/as, </proc/<pid>/stat instead
	of /proc/<pid>/status and remove to use /proc/<pid>/ctl. Use waitpid
	on the parent process.
	(Pgrab, Preopen, Pstopstatus): Similar with the Pxcreat. Fix the proc
	files and don't use ctl to control the process.

2010-11-16  Shujing Zhao  <pearly.zhao@oracle.com>
	